GC logging and verbose heart beating